--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-dotenv": "^0.2.0",
-    "react-native-web": "^0.11.7"
+    "react-native-share-menu": "^2.2.2",
+    "react-native-web": "^0.11.7",
+    "spotify-web-api-js": "^1.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
